--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 # Pin dependencies that might cause breakage
-Werkzeug==2.1.2
+Werkzeug==2.3.7
 SQLAlchemy==1.4.46
 
 # Build dependencies
-Flask==2.1.2
+Flask==2.3.3
 Flask-SQLAlchemy==2.5.1
-psycopg2-binary==2.9.3
+psycopg2==2.9.9
+psycopg2-binary==2.9.7
 python-dotenv==0.20.0
 Flask-Talisman
 Flask-CORS
@@ -15,7 +16,7 @@ gunicorn==20.1.0
 honcho==1.1.0
 
 # Code quality
-pylint==2.14.0
+pylint==3.0.0
 flake8==4.0.1
 black==22.3.0
 
